--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,15 @@
-<div class="flex flex-col items-center justify-center min-h-screen bg-yellow-50 p-4">
-  <h1
-    class="text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-extrabold tracking-[0.1em] text-pink-500 text-center mb-30">
-    Fale uma palavra
-  </h1>
-
+<app-header></app-header>
+<div class="flex flex-col items-center justify-center">
   <button (click)="reconhecerVoz()"
-    class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">
+    class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2">
     <span class="text-2xl" *ngIf="!escutando">🎤 FALAR</span>
     <span class="text-2xl" *ngIf="escutando">🎧 Escutando...</span>
   </button>
 
 
   <div *ngIf="palavra && palavra.trim()"
-    class="palavra text-4xl sm:text-6xl md:text-7xl lg:text-8xl font-extrabold text-pink-400 text-center mt-30 flex">
+    class="palavra text-4xl sm:text-6xl md:text-5xl lg:text-6xl font-extrabold text-pink-400 text-center mt-4 flex p-1 flex-wrap justify-center">
     {{ palavra.toUpperCase() }}
   </div>
 </div>
+<app-footer></app-footer>
