--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,5 @@
-<footer class="fixed bottom-0 w-full bg-yellow-60 py-3 text-center text-sm text-gray-700 shadow-inner">
+<!-- app-footer.component.html -->
+<footer class="w-full bg-yellow-60 py-3 text-center text-sm text-gray-700 shadow-inner">
     Desenvolvido por
     <a href="https://seulink.com" target="_blank" class="text-blue-600 hover:underline font-semibold">
         Gabriel Alves Toyo
