style: Adicionando animação no botão

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <!-- app-footer.component.html -->
 <footer class="w-full bg-yellow-60 py-3 text-center text-sm text-gray-700 shadow-inner">
     Desenvolvido por
-    <a href="https://seulink.com" target="_blank" class="text-blue-600 hover:underline font-semibold">
+    <a [href]="linkedinUrl" target="_blank" class="text-blue-600 hover:underline font-semibold">
         Gabriel Alves Toyo
     </a>
 </footer>
