--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
       <span class="text-2xl" *ngIf="escutando">🎧 Escutando...</span>
     </button>
 
-    <div *ngIf="palavra && palavra.trim()"
-      class="palavra break-words break-all w-full max-w-full px-2 text-xl sm:text-2xl md:text-3xl lg:text-4xl font-extrabold text-pink-400 text-center mt-4 flex flex-wrap justify-center p-1 mb-2">
+    <div *ngIf="palavra && palavra.trim() || true"
+      class="palavra break-words break-all w-full max-w-full px-2 text-4xl sm:text-2xl md:text-3xl lg:text-4xl font-extrabold text-pink-400 text-center mt-4 flex flex-wrap justify-center p-1 mb-2">
       {{ palavra.toUpperCase() }}
     </div>
   </main>
