--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div class="flex flex-col min-h-screen">
   <app-header></app-header>
 
-  <main class="flex-1 flex flex-col items-center justify-center">
+  <main class="flex-1 flex flex-col justify-start items-center gap-24">
     <button (click)="reconhecerVoz()" [disabled]="escutando"
-      class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 animate-scalePulse mb-2">
+      class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center animate-scalePulse mb-2">
       <span class="text-2xl" *ngIf="!escutando">🎤 FALAR</span>
       <span class="text-2xl" *ngIf="escutando">🎧 Escutando...</span>
     </button>
 
-    <div *ngIf="palavra && palavra.trim() || true"
+    <div *ngIf="palavra && palavra.trim()"
       class="palavra break-words break-all w-full max-w-full px-2 text-4xl sm:text-2xl md:text-3xl lg:text-4xl font-extrabold text-pink-400 text-center mt-4 flex flex-wrap justify-center p-1 mb-2">
       {{ palavra.toUpperCase() }}
     </div>
