--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,29 @@
 <div class="flex flex-col min-h-screen">
   <app-header></app-header>
 
-  <main class="flex-1 flex flex-col justify-start items-center gap-24">
+  <main class="flex-1 flex flex-col justify-start items-center">
+
+    <div class="flex justify-center items-center gap-10">
+      <label class="flex flex-col items-center cursor-pointer">
+        <input type="radio" name="tipo" [(ngModel)]="tipoSelecionado" value="numero" class="sr-only" />
+        <img src="assets/numeros.png" [ngClass]="{
+            'animate-scalePulse': tipoSelecionado === 'numero',
+            'opacity-100': tipoSelecionado === 'numero',
+            'opacity-60': tipoSelecionado !== 'numero'
+          }" class="w-30 transition duration-300" alt="Números" />
+      </label>
+
+      <label class="flex flex-col items-center cursor-pointer">
+        <input type="radio" name="tipo" [(ngModel)]="tipoSelecionado" value="letra" class="sr-only" />
+        <img src="assets/letras.png" [ngClass]="{
+            'animate-scalePulse': tipoSelecionado === 'letra',
+            'opacity-100': tipoSelecionado === 'letra',
+            'opacity-60': tipoSelecionado !== 'letra'
+          }" class="w-30 transition duration-300" alt="Letras" />
+      </label>
+    </div>
+
+
     <button (click)="reconhecerVoz()" [disabled]="escutando"
       class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center animate-scalePulse mb-2">
       <span class="text-2xl" *ngIf="!escutando">🎤 FALAR</span>
