--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
     </div>
 
 
-    <button (click)="teste()" [disabled]="escutando"
+    <button (click)="reconhecerVoz()" [disabled]="escutando"
       class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center animate-scalePulse mb-2">
       <span class="text-2xl" *ngIf="!escutando">🎤 FALAR</span>
       <span class="text-2xl" *ngIf="escutando">🎧 Escutando...</span>
